--- a/ReadMe
+++ b/ReadMe
@@ -1,5 +1,3 @@
-The video has been uploaded to Youtube (link: https://youtu.be/wnCrCkR4Ma8) and you can also find it in the zip fold in case of internet or Youtube issue.
+The video has been uploaded to Youtube (link: https://youtu.be/wnCrCkR4Ma8).
 
-My raw data files are results.txt and vacounties.json.
-
-Thanks a lot!
+The raw data files are results.txt and vacounties.json.
